feat: js code added, incl randomization and event listeners

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -74,11 +74,11 @@
         class="header__dot header__dot--blue"></span>S</h1>
     <p class="subtitle">Quote generator</p>
   </header>
-  <main>
-    <button class="button">get a quote</button>
+  <main class="main">
+    <button class="button button--js">get a quote</button>
     <section class="quote">
-      <p class="quote__text">Quote text</p>
-      <p class="quote__author">Quote author</p>
+      <p class="quote__text quote__text--js">Quote text</p>
+      <p class="quote__author quote__author--js">Quote author</p>
     </section>
 
   </main>
